# uberAgent-Sigma-Rule-Coverage-Explorer

./: .gitignore  CNAME  LICENSE  README.md  index.html  pyproject.toml  rule-coverage.py
.github/workflows/: Coverage.yml
css/: style.css  tailwind.css
data/: model.json
js/: app.js
tests/: test_rule_coverage.py
util/: utility.py
