[tool.poetry]
name = "sigma-rule-coverage"
version = "0.1.0"
description = "Utility to test sigma rule coverage."
authors = ["Sven Scharmentke <sven@vastlimits.com>"]
license = "MIT"
repository = "https://github.com/svnscha/sigma-rule-coverage"
packages = [
    { include = "util" }
]

[tool.poetry.dependencies]
python = "^3.8"
pysigma = "^0.10.2"
pysigma-backend-uberagent = "^0.3.47"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
